--- a/countdown-from-10/index.html
+++ b/countdown-from-10/index.html
@@ -1,1 +1,17 @@
-hej
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Countdown</title>
+</head>
+<body>
+    <p>
+        <span id="seconds">10</span>
+        <span id="text">sekunder</span>
+    </p>
+    <script src="./script.js"></script>
+</body>
+</html>
