--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -8,25 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <div id="computer-container">
-            <h1 id="computer-choice"></h1>
+    <main>
+        <div id="button-container">
+            <button onclick="chooseRock()">Rock</button>
+            <button id="paper" onclick="choosePaper()">Paper</button>
+            <button onclick="chooseScissors()">Scissors</button>    
         </div>
-        <div id="result-container">
-            <h2 id="result"></h2>
-        </div>
-        <div id="player-container">
-            <div id="player-choice-container">
-                <h1 id="player-choice"></h1>
-            </div>
-            <div id="button-container">
-                <button onclick="chooseRock()">Rock</button>
-                <button id="paper" onclick="choosePaper()">Paper</button>
-                <button onclick="chooseScissors()">Scissors</button>    
-            </div>
-        </div>
-    </div>
-
+        <button id="play-again"><span id="result"></span> click to play again</button>
+    </main>
+    
     <script src="./script.js"></script>
 </body>
 </html>
